<resources>
    <string name="app_name">MP Quera App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="answer_text">Answer Text</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="university">University</string>
    <string name="title_activity_main_page" translatable="false">MainPageActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="course_name">Course Name</string>
    <string name="submit">submit</string>
    <string name="create">create</string>
    <string name="deadline">Deadline</string>
    <string name="homework_default_title">New Homework</string>
    <string name="homework_default_description">Dear students. Here is a new homework!</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="student_id">Student ID</string>
    <string name="are_you_professor">Professor</string>
    <string name="welcome_to_quera">Welcome to Quera</string>
    <string name="sign_up">Sign Up</string>
    <string name="professor">Professor</string>
    <string name="student">Student</string>
    <string name="search" translatable="false">Search</string>
    <string name="title_activity_course_page_professor" translatable="false">CoursePageProfessorActivity</string>
    <string name="title_activity_course_page_prof" translatable="false">CoursePageProf</string>
 HEAD
    <string name="answers">answers</string>
    <string name="no_gade_give">No Grade</string>
=======
    <string name="title_activity_professor_homework" translatable="false">ProfessorHomeworkActivity</string>
    <string name="grade">Grade</string>
    >>>>>>> c74680ff428e58bdedd9db1675b6f01b6dab5d45
</resources>