<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/newHomeworkTitleTextView"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/homework_default_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/homeworkDescriptionEditText"
        android:layout_width="344dp"
        android:layout_height="262dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingStart="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/homework_default_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newHomeworkTitleTextView" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="212dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeworkDescriptionEditText" />

    <TextView
        android:id="@+id/deadlineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/deadline"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
        app:layout_constraintEnd_toStartOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="164dp"
        android:layout_height="67dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintVertical_bias="0.319" />

</androidx.constraintlayout.widget.ConstraintLayout>
