<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeworkCreateActivity">

    <EditText
        android:id="@+id/newHomeworkTitleTextView"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/homework_default_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/homeworkDescriptionEditText"
        android:layout_width="351dp"
        android:layout_height="357dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingStart="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/homework_default_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newHomeworkTitleTextView" />

    <Button
        android:id="@+id/professorSubmitButtonView"
        android:layout_width="164dp"
        android:layout_height="67dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeworkDescriptionEditText"
        app:layout_constraintVertical_bias="0.258" />

</androidx.constraintlayout.widget.ConstraintLayout>